[package]
name = "eval-md"
version = "0.5.0"
edition = "2021"
authors = [ "Efertone <efertone@pm.me>" ]
description = "This is a tool to evaluate or export code from Markdown files"
readme = "README.md"
homepage = "https://github.com/yitsushi/eval-md"
repository = "https://github.com/yitsushi/eval-md"
license-file = "LICENSE"
keywords = ["markdown", "eval"]
categories = ["command-line-utilities"]

[profile.codecov]
inherits = "test"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

