[package]
name = "eval-md"
version = "1.1.0"
edition = "2021"
authors = [ "Efertone <efertone@pm.me>" ]
description = "This is a tool to evaluate or export code from Markdown files"
readme = "README.md"
homepage = "https://github.com/yitsushi/eval-md"
repository = "https://github.com/yitsushi/eval-md"
license-file = "LICENSE"
keywords = ["markdown", "eval"]
categories = ["command-line-utilities"]

[profile.codecov]
inherits = "test"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
